# TXP_OS

./: .gitignore  Cargo.toml  README.md  build.txt  buildrun.txt  run&use.txt
applications/: README.md
bootloader/: Cargo.toml
bootloader/src/: lib.rs  uefi.rs
crypto/: Cargo.toml
crypto/src/: lib.rs
documentation/: architecture.md  milestones.md  security.md
drivers/: README.md
filesystem/: Cargo.toml
filesystem/src/: lib.rs
gui/: README.md
installer/: README.md
kernel/: Cargo.toml
kernel/src/: entry.rs  gui.rs  lib.rs
memory/: Cargo.toml
memory/src/: lib.rs
networking/: Cargo.toml
networking/src/: lib.rs
package_manager/: README.md
scheduler/: Cargo.toml
scheduler/src/: lib.rs
security/: Cargo.toml
security/src/: lib.rs
shell/: README.md
tests/: README.md
tools/xtask/: Cargo.toml
tools/xtask/src/: main.rs
txdesktop/: README.md
txfirewall/: Cargo.toml
txfirewall/src/: lib.rs
txsentinel/: Cargo.toml
txsentinel/src/: lib.rs
txshield/: Cargo.toml
txshield/src/: lib.rs
txvault/: Cargo.toml
txvault/src/: lib.rs
window_manager/: README.md
